minor content rearrange

--- a/resources/specific/intro.html
+++ b/resources/specific/intro.html
@@ -25,7 +25,7 @@ Why did he have to come to us?</p>
 
 <p>On April 6, 1942, Enlightened Master Tathagata was born in South Korea. He passed away on August 21st, 2008 in Malaysia.</p>
 
-<p>I have compiled this app to serve as place to collect and publish all known textual content left for us by Tathagata.</p> 
+<p>I have compiled this site to serve as place to collect and publish all known textual content left for us by Tathagata.</p> 
 
 <p><span style="text-decoration: underline;">Disclaimer</span>: Tathagata spoke virtually no English, aside from the odd word here and there. So all of the contents from him which are here, aside from those under "New Translations", have been translated from Tathagata's native language of Korean into English by members. I just copied them as-is.</p>
 
