--- a/resources/specific/q_a_disclaimer.html
+++ b/resources/specific/q_a_disclaimer.html
@@ -2,5 +2,5 @@
 
 <p>These questions were claimed to have been asked over email by visitors to the original 'Enlightenment of Tathagata' website, while the Master Tathagata was available to receive questions before his death in 2008.</p>
 <p>The questions are assumed to have been translated from English into Korean, with his answers translated back from Korean to English for the reply.</p>
-<p>I personally fabricated two of the names contained here and received replies via email and via the published site at that time.</p>
+<p>In the past, I had personally made up two of the names contained here for email correspondence with Master Tathagata and received replies via email and via the published 'Enlightenment' site in those days. I've heard multiple other names were fabricated by another individual as well.</p>
 <p>&mdash;The Publisher</p>
