fixing up routing / linking behavior - it would be optimal to have the DOM on web presenting hyperlink hrefs for the links to follow so that e.g. google can crawl the site

--- a/resources/specific/intro.html
+++ b/resources/specific/intro.html
@@ -24,7 +24,7 @@ Why did he have to come to us?</p>
 <br/>
 <p style="text-decoration: underline; ">Note From the Publisher</p>
 
-<p>On April 6, 1942, Enlightened Master Tathagata was born in South Korea. He passed away on August 21st, 2008 in Malaysia.</p>
+<p>On April 6, 1942, Enlightened Master Tathagata was born in South Korea. I was informed He passed away on August 21st, 2008 in Malaysia. There are photos linked from 2008 at the bottom of this page that appear to show his location of interment (you must click through the landing page): http://tathagata.info</p>
 
 <p>I have compiled this site to serve as place to collect and publish all known textual content left for us by Tathagata.</p> 
 
@@ -32,7 +32,7 @@ Why did he have to come to us?</p>
 
 <p>Reading the translations alone can only serve as a basic introduction to the true meanings of his teachings. Reading them in Korean as a native speaker with full context would generally be superior.</p>
 
-<p>The other contents under "New Translations" were produced by people who are unfamiliar with Tathagata and merely spoke Korean, or were produced after Tathagata died, and therefore were not checked with him. Everything published here should be considered very carefully and your initial impression of its meaning should not necessarily be believed. For example, after reading Chapter 8. 'Law of Cause and Effect' from His book of poetry Traveler for almost a decade, it was only after some changes in my life that I began to read many of the poems with greater meanings.</p>
+<p>The other contents under "New Translations" were produced by people who are unfamiliar with Tathagata and merely spoke Korean, or were produced after Tathagata died, and therefore were not checked with him. Everything published here should be considered very carefully and your initial impression of its meaning should not necessarily be believed. For example, after reading His book of poetry Traveler for about a decade, it was only after a major wake up call in my personal life that I began to read many of the poems in Chapter 8. 'Law of Cause and Effect' with meanings which were more than relatively superficial.</p>
 
 <p>All contents are Copyright &copy; 1984 - 2021,<br/>Enlightenment of Tathagata.</p>
 
