--- a/resources/specific/intro.html
+++ b/resources/specific/intro.html
@@ -24,7 +24,7 @@ Why did he have to come to us?</p>
 <br/>
 <p style="text-decoration: underline; ">Note From the Publisher</p>
 
-<p>On April 6, 1942, Enlightened Master Tathagata was born in South Korea. I was informed He passed away on August 21st, 2008 in Malaysia. There are photos linked from 2008 at the bottom of this page that appear to show his location of interment (you must click through the landing page): http://tathagata.info</p>
+<p>On April 6, 1942, Enlightened Master Tathagata was born in South Korea. I was informed He passed away years earlier than we expected on August 21st, 2008 in Malaysia. There are photos linked from 2008 at the bottom of this page that appear to show his location of interment (you must click through the landing page): http://tathagata.info</p>
 
 <p>I have compiled this site to serve as place to collect and publish all known textual content left for us by Tathagata.</p> 
 
