intro archive link

--- a/resources/specific/intro.html
+++ b/resources/specific/intro.html
@@ -48,6 +48,10 @@ on the website that contains it on this site or another site.</p>
 
 >https://github.com/TathagataTranslated/TathagataTranslated-app-rn</a>. Or if you would like a translation which you made to be published here then you can submit them to us as well for consideration.</p>
 
-<p>If you would like to help spread Tathagata's enlightenment, we would also greatly appreciate your effort to link to an original 'Enlightenment of Tathagata' webpage on appropriate and relevant forum threads across the internet (i.e. on topics such as Karma and Destiny) in order to increase its search ranking so that more people can discover the existence of such a person and such information via search terms like 'enlightenment'. That was personally how I found out about Tathagata. Most of this content was originally published on that website and in this publisher's opinion it represents one of the best and most close-to-life introductions to Tathagata's activities that remains. For more guidance on this check out the page Paul Iddon put together on promotion: http://www.members.tripod.com/tathagata2000/promote.htm</p>
+<p>If you would like to help spread Tathagata's enlightenment, we would also greatly appreciate your effort to link to an original 'Enlightenment of Tathagata' webpage on appropriate and relevant forum threads across the internet (i.e. on topics such as Karma and Destiny) in order to increase its search ranking so that more people can discover the existence of such a person and such information via search terms like 'enlightenment'. That was personally how I found out about Tathagata. Most of this content was originally published on that website and in this publisher's opinion it represents one of the best and most close-to-life introductions to Tathagata's activities that remains. For more guidance on this check out the page Paul Iddon put together on promotion: <a href="https://web.archive.org/web/20110619083837/http://www.members.tripod.com/tathagata2000/promote.htm"
+		  target="_blank"
+  rel="noopener noreferrer"
 
-<p>I am usually logged in to receive notifications of new emails if you need to ask me a question at enlightenmentappemails@gmail.com.</p>
+>https://web.archive.org/web/20110619083837/http://www.members.tripod.com/tathagata2000/promote.htm</a>. (Note: The original page seems to have gone offline after many years. )</p>
+
+<p>I am usually logged in to receive notifications of new emails if you need to ask me a question at enlightenmentappemails _at _ gmail _dot_ com .</p>
